--- a/springngblog/src/main/resources/application.properties
+++ b/springngblog/src/main/resources/application.properties
@@ -1,1 +1,6 @@
-
+spring.jpa.hibernate.ddl-auto=create
+spring.datasource.url=jdbc:mysql://localhost:3306/ngspringblog
+spring.datasource.username=1513177
+spring.datasource.password=1513177
+#spring.datasource.driver-class-name =com.mysql.jdbc.Driver
+spring.jpa.show-sql: true
